# website-about-me

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
docs/: 404.html  CNAME  index.html
docs/assets/: animations-dxh5712f9f494683a7e.css  favicon.svg.br  firacode.ttf.br  fonts-dxh7d349dde55a8b886.css  fonts-dxh9857d1275563f79.css  image-2c28d94fe8599c76.png.br  main-4fc2976598fdc567.css  main-4fc2976598fdc567.css.br  main-5a0e10264dd14e01.css  main-5a0e10264dd14e01.css.br  main-dxh282a90909de5a3cc.css  modern-normalize-dxh1793db489322b39d.css  modern-normalize-dxh58c05fd25080a5ac.css  style-dxh1492bc3f2f50166.css  style-dxh3283a4837877e5d5.css  style-dxh702e12aa7abe5844.css  style-dxh7793a164c444e98.css  style-dxh863c3e61b27c91d.css  style-dxha47d5765d842ead4.css  style-dxhadd26e736a105f70.css  style-dxhb055a48b4135ef2b.css  style-dxhd0306a73caa67b2b.css  style-dxhd1926d87cfc9cf1.css  style-dxhea58faf4f8c8ddda.css  style-dxhf18f144273cb389.css  style-dxhf58ba9d65c73983.css  theme-dxh99ac237fec413250.css  theme-dxhc7f4ed5fb7a86a4.css  variables-dxhb7db0c128531f8.css  website-about-me-356130a84f474bcb.js  website-about-me-356130a84f474bcb.js.br  website-about-me-dxh83d69c80dba2e040.js  website-about-me-dxha68611e918431d4.js  website-about-me-dxhe83380fb9b269c1d.js  website-about-me-dxhee15b378ef4a6358.js  website-about-me_bg-be10f1b29fe844fd.wasm  website-about-me_bg-be10f1b29fe844fd.wasm.br  website-about-me_bg-dxh21d2dcdf528b4e74.wasm  website-about-me_bg-dxh9d63cb2cf0e8afd9.wasm  website-about-me_bg-dxhb823718c79adabe.wasm  (+3 more)
src/: app.rs  layout.rs  main.rs  prelude.rs
(+52 files in other folders)
