[package]
name = "website-about-me"
version = "0.1.0"
authors = ["Oskar Baran"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-free-icons = { version = "0.9.0", features = ["bootstrap", "font-awesome-brands", "material-design-icons-action", "material-design-icons-navigation"] }
dioxus-sdk = { version = "0.6.0", features = ["storage", "system_theme"] }
serde = { version = "1.0.219", features = ["derive"] }
dioxus-i18n = "0.4.3"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
